[gd_scene load_steps=9 format=2]

[ext_resource path="res://Levels/Level1/EnvirSprites/CrumbledWall.png" type="Texture" id=1]
[ext_resource path="res://Levels/Level1/EnvirSprites/CrumbledWall.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20.2165, 20.8853 )

[sub_resource type="Animation" id=1]
resource_name = "Broke"
length = 1.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.44, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.45, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_crumble"
}, {
"args": [  ],
"method": "_start_reset"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LightOccluder2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Reset"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LightOccluder2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LightOccluder2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 23.219, 22.6324 )

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( -20.8088, -24.7533, -14.0029, -24.7533, -13.9145, -25.4604, -9.31833, -25.5488, -8.96478, -24.9301, -6.93184, -24.8417, -6.93184, -24.4881, -5.42924, -24.3113, -5.42924, -24.6649, -3.13115, -25.5488, -0.391106, -25.5488, 0.492779, -24.7533, 3.85154, -24.7533, 4.47025, -25.1952, 7.9174, -25.2836, 8.53612, -25.0185, 13.3975, -24.7533, 13.6626, -25.372, 18.7008, -25.5488, 18.9659, -25.1068, 20.9105, -24.5765, 21.125, -23.5, 21.75, -23.375, 21.875, -18.75, 21.125, -18.625, 21.1875, -16.5625, 20.3125, -16.125, 20.25, -14.3125, 21.625, -13.625, 20.125, -12, 20.1875, -10.875, 21.125, -9.6875, 21.125, -6.8125, 21.8125, -6.375, 21.8125, -3, 20.625, -1.8125, 20.5625, -0.3125, 21.625, 0.4375, 21.8345, 8.77203, 21.0853, 8.98273, 21.1087, 10.6917, 21.694, 10.9258, 21.859, 17.0974, 20.222, 18.5112, -19.9903, 18.6181, -21.5652, 17.0826, -21.4864, 10.9011, -20.8959, 10.7043, -20.7777, 9.01124, -21.4864, 8.81438, -21.4471, 0.428031, -20.7384, -0.320047, -20.1478, -0.241302, -20.1872, -1.65871, -21.4865, -2.60365, -21.4864, -7.24961, -21.014, -7.36773, -20.9746, -9.45448, -21.4864, -9.57259, -21.4864, -13.4705, -20.4234, -13.628, -20.1084, -16.4234, -20.9746, -16.5809, -20.9352, -18.4708, -21.5258, -18.392, -21.4864, -23.3924, -20.8958, -23.5498 )

[node name="CrumbledWall" type="StaticBody2D"]
collision_layer = 8388616
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.124508, -3.45629 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.124508, -3.45629 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Broke = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/Reset = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 42.6535 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.0905437, -46.845 )
shape = SubResource( 4 )

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
occluder = SubResource( 6 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
